delivery version of gh pages with jekill

--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Static site for the npm package." />
 <meta property="og:description" content="Static site for the npm package." />
-<link rel="canonical" href="http://localhost:4000/about/" />
-<meta property="og:url" content="http://localhost:4000/about/" />
+<link rel="canonical" href="/about/" />
+<meta property="og:url" content="/about/" />
 <meta property="og:site_name" content="Raw Guid Converter" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/about/","description":"Static site for the npm package.","name":"Raw Guid Converter","@type":"WebSite","headline":"About","@context":"http://schema.org"}</script>
+{"url":"/about/","description":"Static site for the npm package.","name":"Raw Guid Converter","@type":"WebSite","headline":"About","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Raw Guid Converter" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Raw Guid Converter" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Raw Guid Converter</a><nav class="site-nav">
