--- a/about/index.html
+++ b/about/index.html
@@ -9,16 +9,16 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Static site for the npm package." />
 <meta property="og:description" content="Static site for the npm package." />
-<link rel="canonical" href="/about/" />
-<meta property="og:url" content="/about/" />
+<link rel="canonical" href="/raw-guid-converter/about/" />
+<meta property="og:url" content="/raw-guid-converter/about/" />
 <meta property="og:site_name" content="Raw Guid Converter" />
 <script type="application/ld+json">
-{"url":"/about/","description":"Static site for the npm package.","name":"Raw Guid Converter","@type":"WebSite","headline":"About","@context":"http://schema.org"}</script>
+{"url":"/raw-guid-converter/about/","description":"Static site for the npm package.","name":"Raw Guid Converter","@type":"WebSite","headline":"About","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Raw Guid Converter" /></head>
+<link rel="stylesheet" href="/raw-guid-converter/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/raw-guid-converter/feed.xml" title="Raw Guid Converter" /></head>
 <body><header class="site-header" role="banner">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/">Raw Guid Converter</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/raw-guid-converter/">Raw Guid Converter</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -28,7 +28,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/raw-guid-converter/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -57,7 +57,7 @@
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/"></data>
+  <data class="u-url" href="/raw-guid-converter/"></data>
 
   <div class="wrapper">
 
@@ -69,7 +69,7 @@
           <li class="p-name">Raw Guid Converter</li><li><a class="u-email" href="mailto:alvarojosepl@gmail.com">alvarojosepl@gmail.com</a></li></ul>
       </div>
 
-      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/kanekotic"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">kanekotic</span></a></li><li><a href="https://www.twitter.com/kanekotic"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">kanekotic</span></a></li></ul>
+      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/kanekotic"><svg class="svg-icon"><use xlink:href="/raw-guid-converter/assets/minima-social-icons.svg#github"></use></svg> <span class="username">kanekotic</span></a></li><li><a href="https://www.twitter.com/kanekotic"><svg class="svg-icon"><use xlink:href="/raw-guid-converter/assets/minima-social-icons.svg#twitter"></use></svg> <span class="username">kanekotic</span></a></li></ul>
 </div>
 
       <div class="footer-col footer-col-3">
