--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p><label>Raw</label> <input id="rawGuid" /><br />
 <label>String</label> <input id="stringGuid" /><br />
 <button id="convert">Convert</button>
-<script type="text/javascript" src="./bundle.js"></script></p>
+<script type="text/javascript" src="/raw-guid-converter/bundle.js"></script></p>
 
 <h2 id="installation">Installation</h2>
 
