--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 <h2 id="convert">Convert</h2>
 
-<p><label>Raw</label> <input id="rawGuid" /><br />
-<label>String</label> <input id="stringGuid" /><br />
+<p><label>Raw</label> <input type="text" id="rawGuid"><br />
+<label>String</label> <input type="text" id="stringGuid"><br />
 <button id="convert">Convert</button>
 <script type="text/javascript" src="/raw-guid-converter/bundle.js"></script></p>
 
